2009-06-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m (-stringByDetectingURLs):
	fixed a leak. Fixed a crash on GNUstep by using arrays of pointers
	to NSRange instead of converting/parsing them to/from NSString.

	* SoObjects/SOGo/NSArray+Utilities.m (-addRange): removed method.
	(-addNonNSObject:withSize:copy:): new helper method to add object
	pointers to arrays.
	(-freeNonNSObjects): new helper method to release the above object
	pointers.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m: fixed rendering of
	CSS content containing comment characters. Ignore certain HTML
	tags that can alter the appearance of the SOGo display altogether
	(SCRIPT, LINK, BASE, META, TITLE).

2009-06-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoFreeBusyObject.m
	(-iCalStringForFreeBusyInfos:withMethod:andUID:andOrganizer:from:to:):
	accept additional "UID" and "organizer" parameters that will be set as
	attributes on the reported freebusy object.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-freebusyResponseForRecipient:withUser:andCalendarData:): expose
	the calendar-data as as !CDATA element.

	* SoObjects/SOGo/SOGoWebDAVValue.m
	(-asWebDavStringWithNamespaces): new overriden method to enable
	the passing of unescapable strings.

2009-06-09  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxCalView.m ([UIxCalView -setCurrentView:]): new
	method to save the user's current view in her/his settings.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView -currentView]):
	returns the active user's last calendar view.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -_sqlStringRangeFromto:]): dates are not
	necessarily defined in case of vTODOs; don't apply the range
	constraint when dates are null so the SQL query return tasks.
	([SOGoAppointmentFolder
	-fetchFields:from:to:title:component:additionalFilters:includeProtectedInformation:]):